# tcc_robo_ros2

./: README.md  sensor_temperatura.ino
arduino/: comunicacao_serial.ino
arduino/comunicacao_serial_sonar/: comunicacao_serial_sonar.ino
arduino/teste/leitura_encoders/: leitura_encoders.ino
arduino/teste/teste_motores/: teste_motores.ino
arduino/teste/validacao_andar_1metro/: validacao_andar_1metro.ino
ros2_ws/behavior_trees/: inline_test.xml
ros2_ws/maps/: meu_mapa_final.yaml
ros2_ws/src/meu_pacote_navegacao/: package.xml
ros2_ws/src/meu_pacote_navegacao/config/: bt_nav_params.yaml  ekf_params.yaml  nav2_params.yaml  robot_localization.yaml
ros2_ws/src/meu_pacote_navegacao/launch/: navegacao.launch.py  navegacao_sem_container.launch.py  teleop_bringup.launch.py
ros2_ws/src/meu_pacote_navegacao/maps/: meu_mapa_final.pgm  meu_mapa_final.yaml
ros2_ws/src/meu_pacote_slam/: package.xml
ros2_ws/src/meu_pacote_slam/launch/: apenas_lidar.launch.py  iniciar_cartographer.launch.py  rplidar.launch.py
ros2_ws/src/robo_driver/: package.xml
ros2_ws/src/robo_driver/robo_driver/: safety_node.py  serial_node.py
